--- a/Documentation/Intel/index.html
+++ b/Documentation/Intel/index.html
@@ -30,6 +30,7 @@
 
 <h1>Documentation</h1>
 <ul>
+  <li><a target="_blank" href="http://www.uefi.org/sites/default/files/resources/ACPI_6.0.pdf">ACPI 6.0 Specification</a></li>
   <li>Get the <a target="_blank" href="https://www.coreboot.org/Git">coreboot source</li>
   <li>Intel&reg; 64 and IA-32 Architectures <a target="_blank" href="http://www.intel.com/content/dam/www/public/us/en/documents/manuals/64-ia-32-architectures-software-developer-manual-325462.pdf">Software Developer Manual</a></li>
   <li>Intel&reg; Firmware Support Package External Architecture Specification <a target="_blank" href="http://www.intel.com/content/dam/www/public/us/en/documents/technical-specifications/fsp-architecture-spec-v1-1.pdf">V1.1</a></li>
@@ -37,6 +38,6 @@
 
 
 <hr>
-<p>Modified: 31 January 2016</p>
+<p>Modified: 28 February 2016</p>
   </body>
 </html>
